--- a/style.css
+++ b/style.css
@@ -18,10 +18,22 @@ body {
 
 /* || typography */
 
-h1, h2, h3 {
-  font-family: 'Cinzel Decorative', cursive;
+/* font change of header's h1 h2 h3 # option1*/
+h1, h2 {
+  font-family: 'Comfortaa', cursive;
+  font-weight: bold;
   color: #2a2a2a;
 }
+h3 {
+  font-family: 'Comfortaa', cursive;
+  font-weight: 300;
+  color: #2a2a2a;
+}
+
+/* h1, h2, h3 {
+  font-family: 'Cinzel Decorative', cursive;
+  color: #2a2a2a;
+} */
 
 p, input, li {
   font-family: 'Roboto Condensed', sans-serif;
@@ -57,7 +69,7 @@ header {
 }
 
 body > * {
-  background-color: red;
+  /* background-color: red; */
   padding: 1%;
 }
 
@@ -137,22 +149,8 @@ footer {
   margin-top: 10px;
 }
 
-/* font change of header's h1 h2 h3 # option1*/
-
-header h1, header h2, header h3 {
-  font-family: 'McLaren', cursive;
-  color: #2a2a2a;
-}
-
 img {
   height: auto;
 }
-
-/* option 2
-
-h1, h2, h3 {
-  font-family: 'McLaren', cursive;
-  color: #2a2a2a;
-} */
 
 
